fix layout issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~animate.css/animate.min"
+@import "~animate.css/animate.min";
 
 .content-container
 {
@@ -26,7 +26,6 @@ border-top: 1px solid #c0c0c0
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  float: left;
 }
 
 .me
